Merged the development branch changes into the release trunk.